# ros2_service_test

./: README.md  default_profile.xml  ipc_test.py
src/ipc_test_client/: CMakeLists.txt  package.xml
src/ipc_test_client/src/: main.cpp
src/ipc_test_msgs/: CMakeLists.txt  package.xml
src/ipc_test_msgs/srv/: IPCTest.srv
src/ipc_test_service/: CMakeLists.txt  package.xml
src/ipc_test_service/src/: main.cpp
